[package]
name = "winsen-co2-sensor"
version = "0.0.0"
authors = ["Vadim Kaushan <admin@disasm.info>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Serial driver for Winsen MH-Z19 / MH-Z19B / MH-Z14 CO2 sensors"
keywords = ["embedded", "no-std", "embedded-hal-driver", "co2", "mh-z19"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
embedded-hal = "0.2.3"
nb = "0.1.2"

[features]
std = []
experimental = []
